fix: border spaces and widths in HTML output now collapse without space
This fix #343 by setting css border-spacing:0px

--- a/inst/web_1.0.0/tabwid.css
+++ b/inst/web_1.0.0/tabwid.css
@@ -1,4 +1,5 @@
 .tabwid table{
+  border-spacing:0px !important;
   border-collapse:collapse;
   line-height:1;
   margin-left:auto;
